--- a/etiquetes-dani.html
+++ b/etiquetes-dani.html
@@ -5,8 +5,57 @@
   <title>Guia etiquetes </title>
 </head>
 <body>
-    <strong>strong representa un texto importante</strong>
-    <br>
-    <small>small representa un comentario aparte</small>
+  <h1>10 etiquetas para trabajar con texto</h1>
+    <h3>&lt;strong&gt;</h3>
+    <p>
+      <strong>representa un texto importante</strong>
+    </p>
+    <h3>&lt;small&gt;</h3>
+    <p>
+      <small>small representa un comentario aparte</small>
+    </p>
+    <h3>&lt;q&gt;</h3>
+    <p>
+      <q>Representa una cita textual</q>
+    </p>
+    <h3>&lt;code&gt;</h3>
+    <p>
+      <code>Representa el codigo del ordenador</code>
+    </p>
+    <h3>&lt;u&gt;</h3>
+    <p>
+      <u>Representa una anotación no textual</u>
+    </p>
+    <h3>&lt;mark&gt;</h3>
+    <p>
+      <mark>Representa texto resaltado con propósitos de referencia</mark>
+    </p>
+    <h3>&lt;s&gt;</h3>
+    <p>
+      <s>Representa un texto que no es exacto o no es relevante</s>
+    </p>
+
+    <h3>&lt;samp&gt;</h3>
+    <p>
+      <samp>Representa la salida de un programa o un ordenador</samp>
+    </p>
+    <h3>&lt;sub&gt;</h3>
+    <h3>&lt;sup&gt;</h3>
+    <p>
+      <sub>Representan un subíndice y un superindice</sub>
+      <sup>Representan un subíndice y un superindice</sup>
+    </p>
+  <h1>2 etiquetas para imagenes</h1>
+  <h1>1 etiqueta para enlaces</h1>
+    <h3>&lt;a&gt;</h3>
+    <p>
+      <a href="http://barresiones.com/moodle/"target="_blank">moodle</a>
+    </p>
+  <h1>4 etiquetas para ordenar el contenido</h1>
+  <h1>1 etiqueta para cita</h1>
+  <p>
+    <q>Representa una cita textual</q>
+  </p>
+  <h1>3 etiquetas para listas</h1>
 </body>
 </html>
