--- a/etiquetes-dani.html
+++ b/etiquetes-dani.html
@@ -6,72 +6,84 @@
   <title>Guia etiquetes </title>
 </head>
 <body>
-  <h1>10 etiquetas para trabajar con texto</h1>
-    <h3>&lt;strong&gt; &lt;/strong&gt;</h3>
-    <p>
-      <strong>representa un texto importante</strong>
-    </p>
-    <h3>&lt;small&gt; &lt;/small&gt;</h3>
-    <p>
-      <small>small representa un comentario aparte</small>
-    </p>
-    <h3>&lt;q&gt;</h3> &lt;/q&gt;
-    <p>
-      <q>Representa una cita textual</q>
-    </p>
-    <h3>&lt;code&gt; &lt;/code&gt;</h3>
-    <p>
-      <code>Representa el codigo del ordenador</code>
-    </p>
-    <h3>&lt;u&gt; &lt;/u&gt;</h3>
-    <p>
-      <u>Representa una anotación no textual</u>
-    </p>
-    <h3>&lt;mark&gt; &lt;/mark&gt;</h3>
-    <p>
-      <mark>Representa texto resaltado con propósitos de referencia</mark>
-    </p>
-    <h3>&lt;s&gt; &lt;/s&gt;</h3>
-    <p>
-      <s>Representa un texto que no es exacto o no es relevante</s>
-    </p>
+    <h2>10 etiquetas para trabajar con texto</h2>
+      <h3>&lt;strong&gt; &lt;/strong&gt;</h3>
+        <p>
+          <strong>representa un texto importante</strong>
+        </p>
+      <h3>&lt;small&gt; &lt;/small&gt;</h3>
+        <p>
+          <small>small representa un comentario aparte</small>
+        </p>
+      <h3>&lt;p&gt; &lt;/p&gt;</h3>
+        <p>
+          Define una parte que debe mostrarse como parrafo
+        </p>
+      <h3>&lt;code&gt; &lt;/code&gt;</h3>
+        <p>
+          <code>Representa el codigo del ordenador</code>
+        </p>
+      <h3>&lt;u&gt; &lt;/u&gt;</h3>
+        <p>
+          <u>Representa una anotación no textual</u>
+        </p>
+      <h3>&lt;mark&gt; &lt;/mark&gt;</h3>
+        <p>
+          <mark>Representa texto resaltado con propósitos de referencia</mark>
+        </p>
+      <h3>&lt;s&gt; &lt;/s&gt;</h3>
+        <p>
+          <s>Representa un texto que no es exacto o no es relevante</s>
+        </p>
 
-    <h3>&lt;samp&gt; &lt;/samp&gt;</h3>
-    <p>
-      <samp>Representa la salida de un programa o un ordenador</samp>
-    </p>
-    <h3>&lt;sub&gt; &lt;/sub&gt;</h3>
-    <h3>&lt;sup&gt; &lt;/sup&gt;</h3>
-    <p>
-      <sub>Representan un subíndice y un superindice</sub>
-      <sup>Representan un subíndice y un superindice</sup>
-    </p>
-  <h1>2 etiquetas para imagenes</h1>
+      <h3>&lt;samp&gt; &lt;/samp&gt;</h3>
+        <p>
+          <samp>Representa la salida de un programa o un ordenador</samp>
+        </p>
+      <h3>&lt;sub&gt; &lt;/sub&gt;</h3>
+      <h3>&lt;sup&gt; &lt;/sup&gt;</h3>
+        <p>
+          <sub>Representan un subíndice y un superindice</sub>
+          <sup>Representan un subíndice y un superindice</sup>
+        </p>
+    <h2>2 etiquetas para imagenes</h2>
+      <h3>&lt;img&gt;</h3>
+          <p>
+            Para poner una imagen en nuestra página web creada por html5 deberemos utilizar la etiqueta img introduciendo lo siguiente:
+             &lt;img src="ruta_imagen"&gt;
+          </p>
+          <img src="img/images.png">
+          <p>
+            Para insertar una imagen .svg pondremos &lt;svg xmlns="Ruta_imagen" version="1.1"&gt; Codigo del contenido svg &lt;/svg&gt;
+            <br>
+            Si hacemos eso tendremos que meter un codigo realmente largo, para evitarlo podemos utilizar de nuevo &lt;img src=""&gt;
+          </p>
+          <img src="img/homer.svg">
 
-    <img src="img/images.png" alt="">
-  <h1>1 etiqueta para enlaces</h1>
-    <h3>&lt;a&gt; &lt;/a&gt;</h3>
-    <p>
-      Para abrir un link en la misma pestaña pondremos esto:
-      <br/>
-      &lt;a href="http://barresiones.com/moodle/"&gt;moodle&lt;/a&gt;
-    </p>
 
-    <p>
-      <a href="http://barresiones.com/moodle/">moodle</a>
-    </p>
-    <p>
-      Para abrir un link en una nueva pestaña pondremos esto:
-      &lt;a href="http://barresiones.com/moodle/"target="_blank"&gt;moodle&lt;/a&gt;
-    </p>
-    <p>
-      <a href="http://barresiones.com/moodle/"target="_blank">moodle</a>
-    </p>
-  <h1>4 etiquetas para ordenar el contenido</h1>
-  <h1>1 etiqueta para cita</h1>
-  <p>
-    <q>Representa una cita textual</q>
-  </p>
-  <h1>3 etiquetas para listas</h1>
+    <h2>1 etiqueta para enlaces</h2>
+      <h3>&lt;a&gt; &lt;/a&gt;</h3>
+        <p>
+            Para abrir un link en la misma pestaña pondremos esto:
+                <br/>
+            &lt;a href="http://barresiones.com/moodle/"&gt;moodle&lt;/a&gt;
+        </p>
+
+        <p>
+            <a href="http://barresiones.com/moodle/">moodle</a>
+        </p>
+        <p>
+            Para abrir un link en una nueva pestaña pondremos esto:
+            &lt;a href="http://barresiones.com/moodle/"target="_blank"&gt;moodle&lt;/a&gt;
+        </p>
+        <p>
+            <a href="http://barresiones.com/moodle/"target="_blank">moodle</a>
+        </p>
+    <h2>4 etiquetas para ordenar el contenido</h2>
+    <h2>1 etiqueta para cita</h2>
+        <p>
+          <q>Representa una cita textual</q>
+        </p>
+    <h2>3 etiquetas para listas</h2>
 </body>
 </html>
