--- a/etiquetes-dani.html
+++ b/etiquetes-dani.html
@@ -80,10 +80,71 @@
             <a href="http://barresiones.com/moodle/"target="_blank">moodle</a>
         </p>
     <h2>4 etiquetas para ordenar el contenido</h2>
+		<h3>&lt;div&gt; &lt;/div&gt;</h3>
+			<p>
+			Puedes hacer que todo el texto uqe este dentro de div tenga unas propiedades como por ejemplo cambiar el color.
+			</p>
+			<div style="color:red">
+  			 <h3>Grupo 1</h3>
+   			 <p>Este bloque tiene definido el texto de color rojo.</p>
+			</div>
+			<h3>&lt;pre&gt; &lt;/pre&gt;</h3>
+			<p>
+			indica a los navegadores que se trata de un texto preformateado.
+			<br />
+			Sus caracteristicas són:
+			</p>
+			<ul>
+			<li type="disc">Se representan con un tipo de fuente de ancho fijo.</li>
+			<li type="disc">Respetan los saltos de línea.</li>
+			<li type="disc">Respetan los espacios en blanco.</li>
+			</ul>
+			<pre>
+ 			Si les decimos a las personas mayores:
+			"He visto una casa preciosa de ladrillo rosa, con geranios en las ventanas y palomas en el tejado",
+			jamás llegarán a imaginarse cómo es esa casa. 
+			Es preciso decirles: "He visto una casa que vale cien mil francos". 
+			Entonces exclaman entusiasmados: "¡Oh, qué preciosa es!"
+			</pre>
+		
     <h2>1 etiqueta para cita</h2>
+	<h3>&lt;q&gt; &lt;/q&gt;</h3>
         <p>
           <q>Representa una cita textual</q>
         </p>
     <h2>3 etiquetas para listas</h2>
+		 <h3>&lt;ol&gt; &lt;/ol&gt;</h3>
+		  <p>
+		  Creas una lista numerada que empieza por el numero que tu desees, en nuestro caso por el 20.
+		  </p>
+		  	<ol>
+		  	<li value="20">Este será el número 20. </li>
+		  	<li>Este será el 21. </li>
+		  	<li> Este será el 22. Y así sucesivamente. </li>
+		  	</ol>
+		  <h3>&lt;ul&gt; &lt;/ul&gt;</h3>
+			<p>
+			Creas listas puntuadas. 
+			Para cambiar el tipo de puntos que quieres utilizar se utiliza la etiqueta: 
+		  <h3>&lt;li&gt; &lt;/li&gt;</h3>
+			</p>
+			<ul>
+			<li type="circle">Esto es un tipo de punto.</li>
+			<li type="square">Este es otro.</li>
+			<li type="disc">Y este es otro diferente.</li>
+			</ul>
+		  <h3>&lt;dt&gt; &lt;/dt&gt;</h3> 
+		   <p>
+		   Esta etiqueta se usa en conjunto con las etiquetas &lt;dl&gt; (define una lista de definiciones) y &lt;dd&gt; (describe el Ítem de la lista).
+		   </p>
+		   <dl>
+   		   <dt>Chocolate</dt>
+   		      <dd>Elaborado a base de cacao</dd>
+   		   <dt>Caramelo</dt>
+     		  <dd>Elaborado a base de azucar</dd>
+</dl>
+<a href="taula-dani.html">Tabla</a>
+<br />
+<a href="estils-dani.html">estilos</a>
 </body>
 </html>
