--- a/estils-dani.html
+++ b/estils-dani.html
@@ -6,15 +6,26 @@
     <meta name="dcterms.created" content="mié, 23 dic 2015 15:50:12 GMT">
     <meta name="description" content="">
     <meta name="keywords" content="">
+    <link rel="stylesheet" type="text/css" href="css/main-dani.css" media="all">
     <title></title>
-    
+
     <!--[if IE]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
+    <header>
+<nav>
+<ul>
+<li><a href="etiquetes-dani.html">Etiquetas</a>
+<br />
+<li><a href="taula-dani.html">Tabla</a>
+</ul>
+</nav>
+</header>
+<h2>Estilos</h2>
   	<h3>Etiquetas</h3>
-	
+
 	<h3>Class</h3>
 	<p>
 	El atributo “class” de los elementos HTML te permite llamar a un código CSS en todos los elementos que queramos (Puedes usar el selector CSS otra vez y otra vez…), solo deberemos llamar a la clase, por ejemplo, tengo un código CSS así:
@@ -69,8 +80,5 @@
 	<br />
 	}
 	</p>
-	<a href="etiquetes-dani.html">Etiquetas</a>
-	<br />
-	<a href="taula-dani.html">Tabla</a>
   </body>
 </html>
