--- a/etiquetes-dani.html
+++ b/etiquetes-dani.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="3"
+  <link rel="stylesheet" type="text/css" href="css/main-dani.css" media="all">
   <title>Guia etiquetes </title>
+
 </head>
 <body>
+<header>
+<nav>
+<ul>
+<li><a href="taula-dani.html">Tabla</a>
+<br />
+<li><a href="estils-dani.html">estilos</a>
+</ul>
+</nav>
+</header>
     <h2>10 etiquetas para trabajar con texto</h2>
       <h3>&lt;strong&gt; &lt;/strong&gt;</h3>
         <p>
@@ -52,6 +62,7 @@
             Para poner una imagen en nuestra página web creada por html5 deberemos utilizar la etiqueta img introduciendo lo siguiente:
              &lt;img src="ruta_imagen"&gt;
           </p>
+		  
           <img src="img/images.png">
           <p>
             Para insertar una imagen .svg pondremos &lt;svg xmlns="Ruta_imagen" version="1.1"&gt; Codigo del contenido svg &lt;/svg&gt;
@@ -59,7 +70,6 @@
             Si hacemos eso tendremos que meter un codigo realmente largo, para evitarlo podemos utilizar de nuevo &lt;img src=""&gt;
           </p>
           <img src="img/homer.svg">
-
 
     <h2>1 etiqueta para enlaces</h2>
       <h3>&lt;a&gt; &lt;/a&gt;</h3>
@@ -86,7 +96,7 @@
 			</p>
 			<div style="color:red">
   			 <h3>Grupo 1</h3>
-   			 <p>Este bloque tiene definido el texto de color rojo.</p>
+   			 Este bloque tiene definido el texto de color rojo.
 			</div>
 			<h3>&lt;pre&gt; &lt;/pre&gt;</h3>
 			<p>
@@ -102,11 +112,11 @@
 			<pre>
  			Si les decimos a las personas mayores:
 			"He visto una casa preciosa de ladrillo rosa, con geranios en las ventanas y palomas en el tejado",
-			jamás llegarán a imaginarse cómo es esa casa. 
-			Es preciso decirles: "He visto una casa que vale cien mil francos". 
+			jamás llegarán a imaginarse cómo es esa casa.
+			Es preciso decirles: "He visto una casa que vale cien mil francos".
 			Entonces exclaman entusiasmados: "¡Oh, qué preciosa es!"
 			</pre>
-		
+
     <h2>1 etiqueta para cita</h2>
 	<h3>&lt;q&gt; &lt;/q&gt;</h3>
         <p>
@@ -124,8 +134,8 @@
 		  	</ol>
 		  <h3>&lt;ul&gt; &lt;/ul&gt;</h3>
 			<p>
-			Creas listas puntuadas. 
-			Para cambiar el tipo de puntos que quieres utilizar se utiliza la etiqueta: 
+			Creas listas puntuadas.
+			Para cambiar el tipo de puntos que quieres utilizar se utiliza la etiqueta:
 		  <h3>&lt;li&gt; &lt;/li&gt;</h3>
 			</p>
 			<ul>
@@ -133,7 +143,7 @@
 			<li type="square">Este es otro.</li>
 			<li type="disc">Y este es otro diferente.</li>
 			</ul>
-		  <h3>&lt;dt&gt; &lt;/dt&gt;</h3> 
+		  <h3>&lt;dt&gt; &lt;/dt&gt;</h3>
 		   <p>
 		   Esta etiqueta se usa en conjunto con las etiquetas &lt;dl&gt; (define una lista de definiciones) y &lt;dd&gt; (describe el Ítem de la lista).
 		   </p>
@@ -143,8 +153,5 @@
    		   <dt>Caramelo</dt>
      		  <dd>Elaborado a base de azucar</dd>
 </dl>
-<a href="taula-dani.html">Tabla</a>
-<br />
-<a href="estils-dani.html">estilos</a>
 </body>
 </html>
