--- a/taula-dani.html
+++ b/taula-dani.html
@@ -6,13 +6,23 @@
     <meta name="dcterms.created" content="mié, 23 dic 2015 15:48:46 GMT">
     <meta name="description" content="">
     <meta name="keywords" content="">
+    <link rel="stylesheet" type="text/css" href="css/main-dani.css" media="all">
     <title></title>
-    
+
     <!--[if IE]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
   <body>
+  <header>
+<nav>
+<ul>
+<li><a href="etiquetes-dani.html">Etiquetas</a>
+<br />
+<li><a href="estils-dani.html">estilos</a>
+</ul>
+</nav>
+</header>
 <table>
   <tr>
     <th scope="col">Atributo</th>
@@ -20,7 +30,7 @@
     <th scope="col">Explicación</th>
     <th scope="col">Ejemplo</th>
   </tr>
- 
+
   <tr>
     <td>background-color</td>
     <td>establece el color de fondo de un elemento.</td>
@@ -31,7 +41,7 @@
 	<br />
   	}</td>
   </tr>
- 
+
   <tr>
     <td>background-image</td>
     <td>define la imagen de fondo de un elemento.</td>
@@ -42,7 +52,7 @@
   	<br />
 	}</td>
   </tr>
- 
+
   <tr>
     <td>background-repeat</td>
     <td> especifica si la imagen es repetida (mosaïco) y de que manera.</td>
@@ -115,7 +125,7 @@
     <td>ol.normal {
   	<br />
 	list-style-type: upper-alpha;
- 	<br /> 
+ 	<br />
   	}</td>
   <tr>
   </tr>
@@ -149,11 +159,8 @@
 	margin: 20px 0px 0 -20px;
   	<br />
   	}</td>
-  <tr>  
+  <tr>
   </tr>
 </table>
-<a href="etiquetes-dani.html">Etiquetas</a>
-<br />
-<a href="estils-dani.html">Estilos</a>
   </body>
 </html>
